# registry-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: main.py
src/api/v1/: deps.py  routes.py  schemas.py  services.py
src/core/: config.py  utils.py
src/db/: database.py  init_db.py  models.py  repositories.py  test_data.py
src/db/alembic/: env.py
src/db/alembic/versions/: 1cd96b8fee10_init.py
src/schemas/: message.py  search.py  transaction.py
