[project]
name = "backend-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "logging>=0.4.9.6",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
